Test_Files/abstract_vm/Error/format5.asm
;     Format 5
;   =============
;   Error test 13

push int16(32 ;)
pu int(32))
push int((32))
push int(3;2)
push int((32)
dump
exit
